fix: switch overflow-y to scroll (#104)

--- a/src/extension/components/ExtensionPage.module.scss
+++ b/src/extension/components/ExtensionPage.module.scss
@@ -1,5 +1,6 @@
 .page {
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
   background-color: var(--card-bg-muted);
   height: calc(100% - var(--header-height));
   // padding here to position progress bar
